[tool.poetry]
name = "gpt-webapp"
version = "0.1.0"
description = ""
authors = ["Shane Blaufuss <79183990+commandline-johnny@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
openai = "^1.51.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
